--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Simple Gantt</title>
@@ -8,18 +9,21 @@
 			font-family: sans-serif;
 			background: #ccc;
 		}
+
 		.container {
 			width: 80%;
 			margin: 0 auto;
 		}
+
 		/* custom class */
 		.gantt .bar-milestone .bar {
 			fill: tomato;
 		}
 	</style>
-	<link rel="stylesheet" href="dist/frappe-gantt.css" />
-	<script src="dist/frappe-gantt.js"></script>
+	<link rel="stylesheet" href="dist/frappe-gantt-with-tree-sidebar.css" />
+	<script src="dist/frappe-gantt-with-tree-sidebar.js"></script>
 </head>
+
 <body>
 	<div class="container">
 		<h2>Interactive Gantt Chart entirely made in SVG!</h2>
@@ -75,6 +79,7 @@
 				dependencies: 'Task 4',
 				custom_class: 'bar-milestone'
 			},
+			/*
 			{
 				start: '2014-01-05',
 				end: '2019-10-12',
@@ -82,24 +87,26 @@
 				id: "Task 6",
 				progress: 0
 			}
+			*/
 		]
 		var gantt_chart = new Gantt(".gantt-target", tasks, {
 			on_click: function (task) {
 				console.log(task);
 			},
-			on_date_change: function(task, start, end) {
+			on_date_change: function (task, start, end) {
 				console.log(task, start, end);
 			},
-			on_progress_change: function(task, progress) {
+			on_progress_change: function (task, progress) {
 				console.log(task, progress);
 			},
-			on_view_change: function(mode) {
+			on_view_change: function (mode) {
 				console.log(mode);
 			},
-			view_mode: 'Month',
+			view_mode: 'Day',
 			language: 'en'
 		});
 		console.log(gantt_chart);
 	</script>
 </body>
+
 </html>
